<resources>
    <string name="app_name">Dungeon Master´s Library</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_personajes">PersonajesActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="add">add</string>
    <string name="personajes">Personajes</string>
    <string name="wiki">Wiki</string>
    <string name="tienda">Tienda</string>
    <string name="master">Master</string>
    <string name="elige_de_las_siguientes_habilidades">Elige de las Siguientes Habilidades</string>
    <string name="combate">Combate</string>
    <string name="habilidades">Habilidades</string>
    <string name="equipamiento">Equipamiento</string>
    <string name="rasgos">Rasgos</string>
    <string name="textview">TextView</string>
</resources>
